force-app/main/default/objects/Feedback_Log__c/Feedback_Log__c.object-meta.xml
<CustomObject>
    <description>Stores feedback submissions from users with rating and content tracking for quality assurance and user satisfaction monitoring.</description>
    <fields>
        <fullName>Name</fullName>
        <label>Feedback Log Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Feedback Log</label>
    <nameField>
        <label>Feedback Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>