force-app/main/default/objects/Feedback_Log__c/fields/Feedback_Text__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Text__c</fullName>
    <description>Long Text Area field for storing the full feedback content</description>
    <label>Feedback Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>