force-app/main/default/objects/Feedback_Log__c/fields/Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Name__c</fullName>
    <label>Submitted By Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>