force-app/main/default/objects/Feedback_Log__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Automatically populated submission date for the feedback log entry</description>
    <displayFormat>yyyy-MM-dd</displayFormat>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>